--- a/Weather_Database/Vacation_Search/Vacation_Search.ipynb
+++ b/Weather_Database/Vacation_Search/Vacation_Search.ipynb
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,6 +928,7 @@
     "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
     "<dt>City</dt><dd>{City}</dd>\n",
     "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Weather</dt><dd>{Current Description}</dd>\n",
     "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
     "</dl>\n",
     "\"\"\"\n",
@@ -941,13 +942,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d84ee8290b14411b18259c87f13483b",
+       "model_id": "b4d32864fcad42ceb7b9eb1426ccbd95",
        "version_major": 2,
        "version_minor": 0
       },
